--- a/site/index.html
+++ b/site/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Welcome to My GitHub Page</title>
+    <title>Hello Coursera!</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
-    <p>This is my GitHub Pages site.</p>
+    <h1>Hello Coursera! It's a great course!</h1>
 </body>
 </html>
